# noobgpu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  justfile
.github/workflows/: ci.yml
challenges/: LICENSE  README.md
challenges/_common/: noobgpu_harness.h
challenges/matrix-multiplication/: challenge.toml  description.md  harness.cu  reference.cu  starter.cu
challenges/matrix-transpose/: challenge.toml  description.md  harness.cu  reference.cu  starter.cu
challenges/relu/: challenge.toml  description.md  harness.cu  reference.cu  starter.cu
challenges/reverse-array/: challenge.toml  description.md  harness.cu  reference.cu  starter.cu
challenges/vector-addition/: challenge.toml  description.md  harness.cu  reference.cu  starter.cu
references/: summary.md
server/: README.md  pyproject.toml
server/src/noobgpu/: api.py  app.py  challenges.py  cli.py  errors.py  gpu.py  runner.py  store.py
server/src/noobgpu/judge/: __init__.py  __main__.py
server/tests/: conftest.py  test_api.py  test_api_gpu.py  test_app.py  test_challenges.py  test_cli.py  test_gpu_specs.py  test_judge.py  test_judge_packs.py  test_packaging.py  test_runner.py
server/tests/data/: infinite_loop.cu  vector_add.cu
server/tests/data/wrong/: matrix-multiplication.cu  matrix-transpose.cu  relu.cu  reverse-array.cu  vector-addition.cu
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  guide.md
web/src/components/: Console.tsx  DifficultyPill.tsx  EditorPanel.tsx  GpuBadge.tsx  GpuModal.tsx  Header.tsx  ProblemPanel.tsx  ServerDown.tsx  StatusBanner.tsx  SubmissionsPanel.tsx
web/src/lib/: api.ts  monaco.ts  types.ts
web/src/pages/: ChallengeList.tsx  Guide.tsx  Workspace.tsx
