[project]
name = "noobgpu"
version = "0.1.1"
description = "Local-first CUDA challenge playground — LeetGPU-style workspace running on your own GPU"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "nvidia-ml-py>=13.610.43",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.scripts]
noobgpu = "noobgpu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noobgpu"]
# Built frontend + challenge packs are copied in by `just build` and
# git-ignored; artifacts forces them into the wheel anyway.
artifacts = ["src/noobgpu/static", "src/noobgpu/data"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires an NVIDIA GPU and the CUDA toolkit (skipped automatically when absent)",
]
